Fix overflow issue with footer and pager components

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,3 @@
-form {
-    display: inline-block;
-}
-
 h3 {
     font-weight: var(--fw-bold);
     margin: 0;
@@ -37,14 +33,18 @@ h3 {
     padding: 0.5rem 1rem;
     background-color: var(--light-grey-shade-medium);
     border-radius: 2rem;
-    flex-basis: fit-content;
+    max-width: 450px;
 }
 
 .email-input-prefix {
+    width: 100%;
+    max-width: 25px;
     margin-right: 0.5rem;
 }
 
 .email-input-field {
+    display: block;
+    width: 100%;
     margin-right: 0.5rem;
     border: none;
     background-color: transparent;
@@ -56,6 +56,9 @@ h3 {
 }
 
 .email-input-suffix {
+    display: block;
+    width: 100%;
+    max-width: 100px;
     padding: 0.5rem 1.5rem;
     border-radius: 1rem;
     border: none;
